--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name":"pwf-models-adminer",
+	"name":"pwf-adminer",
 	"version":"0.1.4",
 	"description":"Module that creates lists, filters, edit forms to manage pwf models",
 	"author":"just-paja <just-paja@gmail.com>",
@@ -19,6 +19,6 @@
 	},
 	"repository":{
 		"type":"git",
-		"url":"https://github.com/just-paja/pwf-models-adminer.git"
+		"url":"https://github.com/just-paja/pwf-adminer.git"
 	}
 }
