Use new model lists

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"license":"GPLv3",
 	"main":"./lib/include.js",
 	"dependencies":{
+		"pwf-models":">=0.4.2",
 		"pwf-models-schema":"*",
 		"pwf-locales":"*",
 		"pwf-form":"*"
