--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
 		"pwf-locales":"*",
 		"pwf-form-models":"*",
 		"pwf-input-collection":">=0.2.0",
-		"pwf-input-file":">0.2.0"
+		"pwf-input-file":">0.2.0",
+		"pwf-input-rte":"0.2"
 	}
 }
