--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	"files":[
 		"lib/adminer/abstract/common",
 		"lib/adminer/abstract/object",
+		"lib/adminer/abstract/filters",
 		"lib/adminer/list",
 		"lib/adminer/obvious",
 		"lib/adminer/editor",
