Adminer maps, modular menu
Adminer works with maps
Added attr 'menu' and 'remap' to adminer with default values

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"lib/adminer/abstract/common",
 		"lib/adminer/abstract/object",
 		"lib/adminer/abstract/filters",
+		"lib/adminer/map",
 		"lib/adminer/list",
 		"lib/adminer/obvious",
 		"lib/adminer/editor",
