--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name":"pwf-adminer",
-	"version":"0.2.1",
+	"version":"0.3.0-rc1",
 	"description":"Module that creates lists, filters, edit forms to manage pwf models",
 	"author":"just-paja <just-paja@gmail.com>",
 	"license":"GPLv3",
