Update bower deps

--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,6 @@
 		"pwf-form-models":"*",
 		"pwf-input-collection":">=0.2.0",
 		"pwf-input-file":">0.2.0",
-		"pwf-input-rte":"0.2"
+		"pwf-input-rte":">=0.3"
 	}
 }
