--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 	"main":"./lib/include.js",
 	"dependencies":{
 		"pwf.js":">=1.7",
-		"pwf-models":">=0.4.2",
-		"pwf-models-schema":"*",
+		"pwf-models-schema":">=0.2",
 		"pwf-locales":"*",
 		"pwf-form":"*",
 		"pwf-input-file":"*",
